--- a/bs2.org
+++ b/bs2.org
@@ -198,9 +198,13 @@
 | Homer                                   | Odyssey I,II                                               | In Greek and English            |
 | Plato                                   | Republic I,II                                              | In Greek and English            |
 | Sri Aurobindo                           | Looking from Within                                        |                                 |
+| Henry David Thoreau                     | Walden; Or Life in the Woods                               |                                 |
+| Jaun Elia                               | Ek Ajab Ghazab Shayar (Hindi)                              |                                 |
+| Fiona Walker                            | love hunt                                                  |                                 |
+| David D Burns MD                        | feeling good: the new mood therapy                         |                                 |
 |-----------------------------------------+------------------------------------------------------------+---------------------------------|
 |                                         | Values through Literature                                  |                                 |
-|                                         | The Art of to Short Fiction: Notes from the CMI course     | contains a lot of short stories |
+| usha mahadevan                          | The Art of to Short Fiction: Notes from the CMI course     | contains a lot of short stories |
 |                                         |                                                            | 8 copies                        |
 |                                         | Stories and Poems for the first year English course        | 2 copies                        |
 |-----------------------------------------+------------------------------------------------------------+---------------------------------|
