--- a/index.org
+++ b/index.org
@@ -26,6 +26,19 @@ Common Room
 
 Please return books by the last week of the semester. I'll send out a mail as a reminder.
 
+* New Arrivals (11 Dec 2024)
+| Donald H. Menzel     | Fundamental Formulas of Physics             |
+| Wearie, Windsor      | Solid State Science                         |
+| H C Verma            | Concepts of Physics                         |
+| D J Struik           | A Source Book in Mathematics 1200-1800      |
+| David D Burns MD     | feeling good: the new mood therapy          |
+| T R Ramadas          | Notes on Calculus                           |
+| Carl B Boyer         | The History of the Calculus                 |
+| Wilbur Richard Knorr | The Ancient Tradition of Geometric Problems |
+| Henry David Thoreau  | Walden; Or Life in the Woods                |
+| Jaun Elia            | Ek Ajab Ghazab Shayar (Hindi)               |
+| Fiona Walker         | love hunt                                   |
+
 * New Arrivals (23 Nov 2024)
 | Frank W. Warner               | Foundations of Differentiable Manifolds and Lie Groups  |
 | Mathematical Society of Japan | Encyclopedic Dictionary of Mathematics 2nd edition: A-M |
