change key holder to ojas

--- a/index.org
+++ b/index.org
@@ -9,10 +9,7 @@
 Mail any errors in the index to vedantn@cmi.ac.in
 
 * Current Key Holders
-
-Vedant Neema <vedantn@cmi.ac.in>
-
-Shashwat Asthana <shashwata@cmi.ac.in>
+Ojas Mehta <ojasmehta.ug2024@cmi.ac.in>
 
 * How to borrow?
 
